# mpm_solver

./: .gitignore  CMakeLists.txt  README.md  memo.txt
assets/: armadillo_rot.bgeo  bunny.bgeo  bunny40.bgeo  bunny_1.bgeo  bunny_z_elong.bgeo  cube.bgeo  monkey.bgeo  sphere.bgeo  sphere_z_2.bgeo  sphere_z_3.bgeo
assets/output/armadillo/SPHVolumeSampling_Kugelstadt2021/: SamplingStep0.bgeo  SamplingStep1.bgeo  SamplingStep10.bgeo  SamplingStep100.bgeo  SamplingStep11.bgeo  SamplingStep12.bgeo  SamplingStep13.bgeo  SamplingStep14.bgeo  SamplingStep15.bgeo  SamplingStep16.bgeo  SamplingStep17.bgeo  SamplingStep18.bgeo  SamplingStep19.bgeo  SamplingStep2.bgeo  SamplingStep20.bgeo  SamplingStep21.bgeo  SamplingStep22.bgeo  SamplingStep23.bgeo  SamplingStep24.bgeo  SamplingStep25.bgeo  SamplingStep26.bgeo  SamplingStep27.bgeo  SamplingStep28.bgeo  SamplingStep29.bgeo  SamplingStep3.bgeo  SamplingStep30.bgeo  SamplingStep31.bgeo  SamplingStep32.bgeo  SamplingStep33.bgeo  SamplingStep34.bgeo  SamplingStep35.bgeo  SamplingStep36.bgeo  SamplingStep37.bgeo  SamplingStep38.bgeo  SamplingStep39.bgeo  SamplingStep4.bgeo  SamplingStep40.bgeo  SamplingStep41.bgeo  SamplingStep42.bgeo  SamplingStep43.bgeo  (+61 more)
assets/output/armadillo/log/: SPH_log.txt
assets/output/armadillo_rot/SPHVolumeSampling_Kugelstadt2021/: SamplingStep0.bgeo  SamplingStep1.bgeo  SamplingStep10.bgeo  SamplingStep11.bgeo  SamplingStep12.bgeo  SamplingStep13.bgeo  SamplingStep14.bgeo  SamplingStep15.bgeo  SamplingStep16.bgeo  SamplingStep17.bgeo  SamplingStep18.bgeo  SamplingStep19.bgeo  SamplingStep2.bgeo  SamplingStep20.bgeo  SamplingStep21.bgeo  SamplingStep22.bgeo  SamplingStep23.bgeo  SamplingStep24.bgeo  SamplingStep25.bgeo  SamplingStep26.bgeo  SamplingStep27.bgeo  SamplingStep28.bgeo  SamplingStep29.bgeo  SamplingStep3.bgeo  SamplingStep30.bgeo  SamplingStep31.bgeo  SamplingStep32.bgeo  SamplingStep33.bgeo  SamplingStep34.bgeo  SamplingStep35.bgeo  SamplingStep36.bgeo  SamplingStep37.bgeo  SamplingStep38.bgeo  SamplingStep39.bgeo  SamplingStep4.bgeo  SamplingStep40.bgeo  SamplingStep41.bgeo  SamplingStep42.bgeo  SamplingStep43.bgeo  SamplingStep44.bgeo  (+60 more)
assets/output/armadillo_rot/log/: SPH_log.txt
assets/output/bunny_1/SPHVolumeSampling_Kugelstadt2021/: SamplingStep0.bgeo  SamplingStep1.bgeo  SamplingStep10.bgeo  SamplingStep11.bgeo  SamplingStep12.bgeo  SamplingStep13.bgeo  SamplingStep14.bgeo  SamplingStep15.bgeo  SamplingStep16.bgeo  SamplingStep17.bgeo  SamplingStep18.bgeo  SamplingStep19.bgeo  SamplingStep2.bgeo  SamplingStep20.bgeo  SamplingStep21.bgeo  SamplingStep22.bgeo  SamplingStep23.bgeo  SamplingStep24.bgeo  SamplingStep25.bgeo  SamplingStep26.bgeo  SamplingStep27.bgeo  SamplingStep28.bgeo  SamplingStep29.bgeo  SamplingStep3.bgeo  SamplingStep30.bgeo  SamplingStep31.bgeo  SamplingStep32.bgeo  SamplingStep33.bgeo  SamplingStep34.bgeo  SamplingStep35.bgeo  SamplingStep36.bgeo  SamplingStep37.bgeo  SamplingStep38.bgeo  SamplingStep39.bgeo  SamplingStep4.bgeo  SamplingStep40.bgeo  SamplingStep41.bgeo  SamplingStep42.bgeo  SamplingStep43.bgeo  SamplingStep44.bgeo  (+60 more)
assets/output/bunny_1/log/: SPH_log.txt
scene/: CMakeLists.txt  jelly.cu  jelly_armadilo.cu  jelly_bunny.cu  jelly_constraint.cu  jelly_cube.cu  jelly_sphere.cu  main.cpp  main.cu  water_fall.cu  water_fall_bunny.cu
src/: CMakeLists.txt
src/engine/: Constraint.cuh  Engine.cpp  Engine.h  Entity.cpp  Entity.h  Grid.h  Kernel.cu  MaterialModel.cuh  MaterialModel.h  Particles.cpp  Particles.h  Profiler.h  Types.h
src/engine/cuda/: CudaTypes.cuh  CudaTypes.h  CudaUtils.cuh  MaterialModels.cuh  SimulationKernel.cu  helper_matrix.h  svd3.h
src/io/: IO.cpp  IO.h
src/render/: Camera.cpp  Camera.hpp  GUIwrapper.cpp  GUIwrapper.hpp  Geometry.cpp  Geometry.h  GraphicsEntity.cpp  GraphicsEntity.hpp  InputHandler.cpp  InputHandler.hpp  Light.cpp  Light.hpp  RenderUtils.cpp  RenderUtils.h  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/render/shader/: FragmentShader.glsl  VertexShader.glsl
src/simulation/: Engine.cpp  Engine.h  Entity.cpp  Entity.h  Grid.cpp  Grid.h  GridManager.cpp  GridManager.h  Kernel.cu  MaterialModel.cpp  MaterialModel.cuh  MaterialModel.h  ParticleManager.cpp  ParticleManager.h  Particles.cpp  Particles.h  Scene.cpp  Scene.h  functions.h  type.h
src/simulation/simulation kernel/: G2P.cuh  Kernel.cu  KernelLauncher.cu  KernelLauncher.cuh  P2G.cu  P2G.cuh
src/system/: CudaDeviceManager.cpp  CudaDeviceManager.h  Profiler.cpp  Profiler.h
src/utils/: UtilHeader.h  debugUtils.cpp  mathUtils.cpp
test/: CMakeLists.txt  cuBLAS_test.cu  cublas_utils.h  cuda_data_type.cu  test_Eigen.cpp  test_cuBLAS.cu  test_cuda.cu  test_fmt.cpp  test_glfw.cpp  test_imgui.cpp  test_libccd.cpp  test_libigl.cpp  test_openmp.cpp  test_openvdb.cpp  test_partio.cpp
test/test_utils/: cublas_utils.h
